[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jollyqol"
version = "0.1.0"
description = "A simple quality-of-life package for personal use."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sean Brynjólfsson", email = "seanbrynjolfsson@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
